# terrahedral

./: .gitignore  LICENSE  README.md  pyproject.toml
src/terrahedral/: __init__.py  catalytic.py  cli.py  core.py  fetch.py  io.py  transforms.py
src/terrahedral/analysis/: __init__.py  alignment.py  catalysis.py  catalytic.py  cross_compare.py  donor_quality.py  ehph.py  electronic.py  geometry.py
src/terrahedral/parsers/: cif_parser.py  mmcif_parser.py  pdb_parser.py  xyz_parser.py
tests/: test_core.py
